--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "css-loader": "^6.7.1",
+    "sass": "^1.54.3",
+    "sass-loader": "^13.0.2",
+    "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   }
