--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "This is a basic picture dictionary app designed to allow small children with communication challenges to communicate.",
   "main": "index.js",
   "scripts": {
-    "start": "npx nodemon index.js",
+    "start": "npx nodemon src/index.js",
     "build": "webpack",
+    "dev": "webpack serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -33,6 +34,7 @@
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3"
   }
 }
