--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "This is a basic picture dictionary app designed to allow small children with communication challenges to communicate.",
   "main": "index.js",
   "scripts": {
-    "start": "npx nodemon src/index.js",
-    "build": "webpack --mode production",
-    "dev": "webpack serve",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "dev": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -33,6 +31,7 @@
     "@babel/preset-env": "^7.18.10",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
+    "html-webpack-plugin": "^5.5.0",
     "sass": "^1.54.3",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
