--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   "homepage": "https://github.com/MonicaCupp/Cupp-MVP-48hr#readme",
   "dependencies": {
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "nodemon": "^2.0.19",
     "pg": "^8.7.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.5"
   },
